# RogueSyntax

./: CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/RogueSyntax/: CMakeLists.txt
src/RogueSyntax/src/: AstNode.cpp  AstNodeStore.cpp  Builtin.cpp  CompilationUnit.cpp  CompilationUnit.h  Compiler.cpp  Compiler.h  Decorator.cpp  Decorator.h  Environment.cpp  Evaluator.cpp  IObject.cpp  Lexer.cpp  Linker.cpp  Linker.h  ObjectStore.cpp  OpCode.cpp  Parser.cpp  RecursiveEvaluator.cpp  RecursiveEvaluator.h  RogueSyntax.cpp  RogueSyntaxApi.cpp  StackEvaluator.cpp  StackEvaluator.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  TypeCoercer.cpp  Util.h  VirtualMachine.cpp  pch.h
src/RogueSyntaxCompiler/: CMakeLists.txt
src/RogueSyntaxCompiler/src/: EditorForm.cpp  EditorForm.h  InfoForm.cpp  InfoForm.h  InputCmd.h  InputForm.cpp  InputForm.h  OutputForm.cpp  OutputForm.h  RogueSyntaxCompiler.cpp  RogueSyntaxCompiler.h  UI.cpp  UI.h  UIConfig.h  UI_Layout_Button.cpp  UI_Layout_Button.h  UI_Layout_Cursor.cpp  UI_Layout_Cursor.h  UI_Layout_Event.h  UI_Layout_Form.cpp  UI_Layout_Form.h  UI_Layout_LineNumber.cpp  UI_Layout_LineNumber.h  UI_Layout_Listbox.cpp  UI_Layout_Listbox.h  UI_Layout_Menu.cpp  UI_Layout_Menu.h  UI_Layout_OpenForm.cpp  UI_Layout_OpenForm.h  UI_Layout_SaveForm.cpp  UI_Layout_SaveForm.h  UI_Layout_ScrollBar.cpp  UI_Layout_ScrollBar.h  UI_Layout_Splitter.cpp  UI_Layout_Splitter.h  UI_Layout_Structs.h  UI_Layout_TextArea.cpp  UI_Layout_TextArea.h  UI_Layout_Textbox.cpp  UI_Layout_Textbox.h  (+9 more)
src/RogueSyntaxCompiler/src/example/: bubble.mk  default.mk  fibonacci.mk  heap.mk
src/RogueSyntaxConsole/: CMakeLists.txt
src/RogueSyntaxConsole/src/: RogueSyntaxREPL.cpp  RogueSyntaxREPL.h  main.cpp
src/RogueSyntaxTest/: CMakeLists.txt
src/RogueSyntaxTest/src/: CompilerTestHelpers.cpp  CompilerTestHelpers.h  CompilerTests.cpp  EvalTests.cpp  LexerTests.cpp  ParserTests.cpp  VirtualMachineTests.cpp  main.cpp
src/include/RogueSyntax/: AstNode.h  AstNodeStore.h  Builtin.h  Compiler.h  Environment.h  Evaluator.h  IObject.h  Identifiable.h  Lexer.h  ObjectStore.h  OpCode.h  Parser.h  RogueSyntax.h  RogueSyntaxApi.h  RogueSyntaxCore.h  StandardLib.h  Token.h  TypeCoercer.h  VirtualMachine.h
